persistent volumes claims as ReadWriteMany

--- a/templates/jenkins-template.yml
+++ b/templates/jenkins-template.yml
@@ -40,7 +40,7 @@ objects:
     name: "${JENKINS_SERVICE_NAME}"
   spec:
     accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
     resources:
       requests:
         storage: "${VOLUME_CAPACITY}"
